cmake_minimum_required(VERSION 3.0.0)
project(IrrlichtBAW VERSION 0.0.0)

include(ExternalProject)

set(CMAKE_MODULE_PATH
        ${CMAKE_MODULE_PATH}
        ${CMAKE_SOURCE_DIR}/CMake
        ${CMAKE_SOURCE_DIR}/CMake/Dependencies
)

include(DependencyZlib)
include(DependencyBzip2)
include(DependencyLibJpeg)
include(DependencyLibPng)
set(SOURCE_FILES
#source/Irrlicht/C3DSMeshFileLoader.cpp
#source/Irrlicht/CAnimatedMeshHalfLife.cpp
source/Irrlicht/CAnimatedMeshSceneNode.cpp
#source/Irrlicht/CB3DMeshFileLoader.cpp
source/Irrlicht/CBillboardSceneNode.cpp
#source/Irrlicht/CBurningShader_Raster_Reference.cpp
source/Irrlicht/CCSMLoader.cpp
source/Irrlicht/CCameraSceneNode.cpp
source/Irrlicht/CColorConverter.cpp
source/Irrlicht/CCubeSceneNode.cpp
source/Irrlicht/CDMFLoader.cpp
source/Irrlicht/CDefaultSceneNodeAnimatorFactory.cpp
source/Irrlicht/CDefaultSceneNodeFactory.cpp
source/Irrlicht/CDepthBuffer.cpp
source/Irrlicht/CEmptySceneNode.cpp
source/Irrlicht/CFPSCounter.cpp
source/Irrlicht/CFileList.cpp
source/Irrlicht/CFileSystem.cpp
source/Irrlicht/CGPUTransientBuffer.cpp
source/Irrlicht/CGeometryCreator.cpp
source/Irrlicht/CImage.cpp
source/Irrlicht/CImageLoaderBMP.cpp
source/Irrlicht/CImageLoaderDDS.cpp
source/Irrlicht/CImageLoaderJPG.cpp
source/Irrlicht/CImageLoaderPCX.cpp
source/Irrlicht/CImageLoaderPNG.cpp
source/Irrlicht/CImageLoaderPPM.cpp
source/Irrlicht/CImageLoaderPSD.cpp
source/Irrlicht/CImageLoaderRGB.cpp
source/Irrlicht/CImageLoaderTGA.cpp
source/Irrlicht/CImageLoaderWAL.cpp
source/Irrlicht/CImageWriterBMP.cpp
source/Irrlicht/CImageWriterJPG.cpp
source/Irrlicht/CImageWriterPCX.cpp
source/Irrlicht/CImageWriterPNG.cpp
source/Irrlicht/CImageWriterPPM.cpp
source/Irrlicht/CImageWriterPSD.cpp
source/Irrlicht/CImageWriterTGA.cpp
source/Irrlicht/CIrrDeviceConsole.cpp
source/Irrlicht/CIrrDeviceLinux.cpp
source/Irrlicht/CIrrDeviceSDL.cpp
source/Irrlicht/CIrrDeviceStub.cpp
source/Irrlicht/CIrrDeviceWin32.cpp
#source/Irrlicht/CLMTSMeshFileLoader.cpp
#source/Irrlicht/CLWOMeshFileLoader.cpp
source/Irrlicht/CLimitReadFile.cpp
source/Irrlicht/CLogger.cpp
#source/Irrlicht/CMS3DMeshFileLoader.cpp
#source/Irrlicht/CMY3DMeshFileLoader.cpp
source/Irrlicht/CMemoryFile.cpp
source/Irrlicht/CMeshCache.cpp
source/Irrlicht/CMeshManipulator.cpp
source/Irrlicht/CMeshSceneNode.cpp
source/Irrlicht/CMeshSceneNodeInstanced.cpp
source/Irrlicht/CMountPointReader.cpp
source/Irrlicht/CNPKReader.cpp
source/Irrlicht/CNullDriver.cpp
source/Irrlicht/COBJMeshFileLoader.cpp
source/Irrlicht/COBJMeshWriter.cpp
source/Irrlicht/COCTLoader.cpp
source/Irrlicht/COSOperator.cpp
#source/Irrlicht/COgreMeshFileLoader.cpp
source/Irrlicht/COpenCLHandler.cpp
source/Irrlicht/COpenGL3DTexture.cpp
source/Irrlicht/COpenGLDriver.cpp
source/Irrlicht/COpenGLExtensionHandler.cpp
source/Irrlicht/COpenGLFrameBuffer.cpp
source/Irrlicht/COpenGLOcclusionQuery.cpp
source/Irrlicht/COpenGLPersistentlyMappedBuffer.cpp
source/Irrlicht/COpenGLQuery.cpp
source/Irrlicht/COpenGLRenderBuffer.cpp
source/Irrlicht/COpenGLSLMaterialRenderer.cpp
source/Irrlicht/COpenGLTexture.cpp
source/Irrlicht/COpenGLTransformFeedback.cpp
source/Irrlicht/COpenGLVAO.cpp
#source/Irrlicht/CPLYMeshFileLoader.cpp
source/Irrlicht/CPLYMeshWriter.cpp
source/Irrlicht/CPakReader.cpp
source/Irrlicht/CReadFile.cpp
#source/Irrlicht/CSMFMeshFileLoader.cpp
#source/Irrlicht/CSTLMeshFileLoader.cpp
source/Irrlicht/CSTLMeshWriter.cpp
source/Irrlicht/CSceneManager.cpp
source/Irrlicht/CSceneNodeAnimatorCameraFPS.cpp
source/Irrlicht/CSceneNodeAnimatorCameraMaya.cpp
source/Irrlicht/CSceneNodeAnimatorDelete.cpp
source/Irrlicht/CSceneNodeAnimatorFlyCircle.cpp
source/Irrlicht/CSceneNodeAnimatorFlyStraight.cpp
source/Irrlicht/CSceneNodeAnimatorFollowSpline.cpp
source/Irrlicht/CSceneNodeAnimatorRotation.cpp
source/Irrlicht/CSceneNodeAnimatorTexture.cpp
source/Irrlicht/CSkinnedMesh.cpp
source/Irrlicht/CSkinnedMeshSceneNode.cpp
source/Irrlicht/CSkyBoxSceneNode.cpp
source/Irrlicht/CSkyDomeSceneNode.cpp
source/Irrlicht/CSoftwareDriver.cpp
source/Irrlicht/CSoftwareDriver2.cpp
source/Irrlicht/CSoftwareTexture.cpp
source/Irrlicht/CSoftwareTexture2.cpp
source/Irrlicht/CSphereSceneNode.cpp
source/Irrlicht/CTRFlat.cpp
source/Irrlicht/CTRFlatWire.cpp
source/Irrlicht/CTRGouraud.cpp
source/Irrlicht/CTRGouraud2.cpp
source/Irrlicht/CTRGouraudAlpha2.cpp
source/Irrlicht/CTRGouraudAlphaNoZ2.cpp
source/Irrlicht/CTRGouraudWire.cpp
source/Irrlicht/CTRNormalMap.cpp
source/Irrlicht/CTRStencilShadow.cpp
source/Irrlicht/CTRTextureBlend.cpp
source/Irrlicht/CTRTextureDetailMap2.cpp
source/Irrlicht/CTRTextureFlat.cpp
source/Irrlicht/CTRTextureFlatWire.cpp
source/Irrlicht/CTRTextureGouraud.cpp
source/Irrlicht/CTRTextureGouraud2.cpp
source/Irrlicht/CTRTextureGouraudAdd.cpp
source/Irrlicht/CTRTextureGouraudAdd2.cpp
source/Irrlicht/CTRTextureGouraudAddNoZ2.cpp
source/Irrlicht/CTRTextureGouraudAlpha.cpp
source/Irrlicht/CTRTextureGouraudAlphaNoZ.cpp
source/Irrlicht/CTRTextureGouraudNoZ.cpp
source/Irrlicht/CTRTextureGouraudNoZ2.cpp
source/Irrlicht/CTRTextureGouraudVertexAlpha2.cpp
source/Irrlicht/CTRTextureGouraudWire.cpp
source/Irrlicht/CTRTextureLightMap2_Add.cpp
source/Irrlicht/CTRTextureLightMap2_M1.cpp
source/Irrlicht/CTRTextureLightMap2_M2.cpp
source/Irrlicht/CTRTextureLightMap2_M4.cpp
source/Irrlicht/CTRTextureLightMapGouraud2_M4.cpp
source/Irrlicht/CTRTextureWire2.cpp
source/Irrlicht/CTarReader.cpp
source/Irrlicht/CVideoModeList.cpp
source/Irrlicht/CWADReader.cpp
source/Irrlicht/CWriteFile.cpp
source/Irrlicht/CXMeshFileLoader.cpp
source/Irrlicht/CZBuffer.cpp
source/Irrlicht/CZipReader.cpp
source/Irrlicht/FW_Mutex.cpp
source/Irrlicht/IBurningShader.cpp
source/Irrlicht/Irrlicht.cpp
#source/Irrlicht/MacOSX/CIrrDeviceMacOSX.mm
source/Irrlicht/STextureSamplingParams.cpp
source/Irrlicht/aesGladman/aescrypt.cpp
source/Irrlicht/aesGladman/aeskey.cpp
source/Irrlicht/aesGladman/aestab.cpp
source/Irrlicht/aesGladman/fileenc.cpp
source/Irrlicht/aesGladman/hmac.cpp
source/Irrlicht/aesGladman/prng.cpp
source/Irrlicht/aesGladman/pwd2key.cpp
source/Irrlicht/aesGladman/sha1.cpp
source/Irrlicht/aesGladman/sha2.cpp
source/Irrlicht/bzip2/blocksort
source/Irrlicht/bzip2/bzcompress
source/Irrlicht/bzip2/bzlib
source/Irrlicht/bzip2/crctable
source/Irrlicht/bzip2/decompress
source/Irrlicht/bzip2/huffman
source/Irrlicht/bzip2/randtable
source/Irrlicht/convert_utf/ConvertUTF
source/Irrlicht/coreutil.cpp
source/Irrlicht/jpeglib/jaricom
source/Irrlicht/jpeglib/jcapimin
source/Irrlicht/jpeglib/jcapistd
source/Irrlicht/jpeglib/jcarith
source/Irrlicht/jpeglib/jccoefct
source/Irrlicht/jpeglib/jccolor
source/Irrlicht/jpeglib/jcdctmgr
source/Irrlicht/jpeglib/jchuff
source/Irrlicht/jpeglib/jcinit
source/Irrlicht/jpeglib/jcmainct
source/Irrlicht/jpeglib/jcmarker
source/Irrlicht/jpeglib/jcmaster
source/Irrlicht/jpeglib/jcomapi
source/Irrlicht/jpeglib/jcparam
source/Irrlicht/jpeglib/jcprepct
source/Irrlicht/jpeglib/jcsample
source/Irrlicht/jpeglib/jctrans
source/Irrlicht/jpeglib/jdapimin
source/Irrlicht/jpeglib/jdapistd
source/Irrlicht/jpeglib/jdarith
source/Irrlicht/jpeglib/jdatadst
source/Irrlicht/jpeglib/jdatasrc
source/Irrlicht/jpeglib/jdcoefct
source/Irrlicht/jpeglib/jdcolor
source/Irrlicht/jpeglib/jddctmgr
source/Irrlicht/jpeglib/jdhuff
source/Irrlicht/jpeglib/jdinput
source/Irrlicht/jpeglib/jdmainct
source/Irrlicht/jpeglib/jdmarker
source/Irrlicht/jpeglib/jdmaster
source/Irrlicht/jpeglib/jdmerge
source/Irrlicht/jpeglib/jdpostct
source/Irrlicht/jpeglib/jdsample
source/Irrlicht/jpeglib/jdtrans
source/Irrlicht/jpeglib/jerror
source/Irrlicht/jpeglib/jfdctflt
source/Irrlicht/jpeglib/jfdctfst
source/Irrlicht/jpeglib/jfdctint
source/Irrlicht/jpeglib/jidctflt
source/Irrlicht/jpeglib/jidctfst
source/Irrlicht/jpeglib/jidctint
source/Irrlicht/jpeglib/jmemmgr
source/Irrlicht/jpeglib/jmemnobs
source/Irrlicht/jpeglib/jquant1
source/Irrlicht/jpeglib/jquant2
source/Irrlicht/jpeglib/jutils
source/Irrlicht/libpng/png
source/Irrlicht/libpng/pngerror
source/Irrlicht/libpng/pngget
source/Irrlicht/libpng/pngmem
source/Irrlicht/libpng/pngpread
source/Irrlicht/libpng/pngread
source/Irrlicht/libpng/pngrio
source/Irrlicht/libpng/pngrtran
source/Irrlicht/libpng/pngrutil
source/Irrlicht/libpng/pngset
source/Irrlicht/libpng/pngtrans
source/Irrlicht/libpng/pngwio
source/Irrlicht/libpng/pngwrite
source/Irrlicht/libpng/pngwtran
source/Irrlicht/libpng/pngwutil
source/Irrlicht/lzma/LzmaDec
source/Irrlicht/os.cpp
source/Irrlicht/zlib/adler32
source/Irrlicht/zlib/compress
source/Irrlicht/zlib/crc32
source/Irrlicht/zlib/deflate
source/Irrlicht/zlib/inffast
source/Irrlicht/zlib/inflate
source/Irrlicht/zlib/inftrees
source/Irrlicht/zlib/trees
source/Irrlicht/zlib/uncompr
source/Irrlicht/zlib/zutil
)

include_directories(
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/source/Irrlicht/utf8/source
        ${CMAKE_SOURCE_DIR}/source/Irrlicht/convert_utf
)

#aesGladman
#libpng
#utf8
#unwind

#include(CTest)
#enable_testing()

set(CMAKE_CXX_FLAGS "-Wextra -Wall -g -W -Wno-unused-parameter -fno-omit-frame-pointer -fno-exceptions -fuse-ld=gold -msse3 -ggdb3 -std=c++03 -fstack-protector-strong -D_IRR_STATIC_LIB_ -D_DEBUG -fuse-ld=gold -fstack-protector-strong -lGL -D_IRR_COMPILE_WITH_OPENGL_")

#<Add directory="zlib" />
#<Add directory="libpng" />
#<Add directory="../Irrlicht" />
#<Add directory="convert_utf" />
#<Add directory="utf8/source/utf8" />
#<Add directory="utf8/source" />
#
#<Add library="Xxf86vm" />
#<Add library="unwind-x86_64" />
#<Add library="unwind" />
##<Add directory="/usr/X11R6/lib" />
##<Add directory="/usr/local/lib" />

add_library(IrrlichtBAW ${SOURCE_FILES})

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
