cmake_minimum_required(VERSION 3.0.0)
project(IrrlichtBAW VERSION 0.0.0)

include(ExternalProject)

set(CMAKE_MODULE_PATH
${CMAKE_MODULE_PATH}
${CMAKE_SOURCE_DIR}/CMake
${CMAKE_SOURCE_DIR}/CMake/Dependencies
${CMAKE_SOURCE_DIR}/examples_test
)

find_package(OpenGL REQUIRED)
#include(DependencyBzip2)
#include(DependencyLibJpeg)
#include(DependencyLibPng)
#include(DependencyZlib)

# Make an option to not build examples
include(Examples)

set(SOURCE_FILES
source/Irrlicht/CAnimatedMeshSceneNode.cpp
source/Irrlicht/CBillboardSceneNode.cpp
source/Irrlicht/CCSMLoader.cpp
source/Irrlicht/CCameraSceneNode.cpp
source/Irrlicht/CColorConverter.cpp
source/Irrlicht/CCubeSceneNode.cpp
source/Irrlicht/CDMFLoader.cpp
source/Irrlicht/CDefaultSceneNodeAnimatorFactory.cpp
source/Irrlicht/CDefaultSceneNodeFactory.cpp
source/Irrlicht/CDepthBuffer.cpp
source/Irrlicht/CEmptySceneNode.cpp
source/Irrlicht/CFPSCounter.cpp
source/Irrlicht/CFileList.cpp
source/Irrlicht/CFileSystem.cpp
source/Irrlicht/CGPUTransientBuffer.cpp
source/Irrlicht/CGeometryCreator.cpp
source/Irrlicht/CImage.cpp
source/Irrlicht/CImageLoaderBMP.cpp
source/Irrlicht/CImageLoaderDDS.cpp
source/Irrlicht/CImageLoaderJPG.cpp
source/Irrlicht/CImageLoaderPCX.cpp
source/Irrlicht/CImageLoaderPNG.cpp
source/Irrlicht/CImageLoaderPPM.cpp
source/Irrlicht/CImageLoaderPSD.cpp
source/Irrlicht/CImageLoaderRGB.cpp
source/Irrlicht/CImageLoaderTGA.cpp
source/Irrlicht/CImageLoaderWAL.cpp
source/Irrlicht/CImageWriterBMP.cpp
source/Irrlicht/CImageWriterJPG.cpp
source/Irrlicht/CImageWriterPCX.cpp
source/Irrlicht/CImageWriterPNG.cpp
source/Irrlicht/CImageWriterPPM.cpp
source/Irrlicht/CImageWriterPSD.cpp
source/Irrlicht/CImageWriterTGA.cpp
source/Irrlicht/CIrrDeviceConsole.cpp
source/Irrlicht/CIrrDeviceLinux.cpp
source/Irrlicht/CIrrDeviceSDL.cpp
source/Irrlicht/CIrrDeviceStub.cpp
source/Irrlicht/CIrrDeviceWin32.cpp
source/Irrlicht/CLimitReadFile.cpp
source/Irrlicht/CLogger.cpp
source/Irrlicht/CMemoryFile.cpp
source/Irrlicht/CMeshCache.cpp
source/Irrlicht/CMeshManipulator.cpp
source/Irrlicht/CMeshSceneNode.cpp
source/Irrlicht/CMeshSceneNodeInstanced.cpp
source/Irrlicht/CMountPointReader.cpp
source/Irrlicht/CNPKReader.cpp
source/Irrlicht/CNullDriver.cpp
source/Irrlicht/COBJMeshFileLoader.cpp
source/Irrlicht/COBJMeshWriter.cpp
source/Irrlicht/COCTLoader.cpp
source/Irrlicht/COSOperator.cpp
source/Irrlicht/COpenCLHandler.cpp
source/Irrlicht/COpenGL3DTexture.cpp
source/Irrlicht/COpenGLDriver.cpp
source/Irrlicht/COpenGLExtensionHandler.cpp
source/Irrlicht/COpenGLFrameBuffer.cpp
source/Irrlicht/COpenGLOcclusionQuery.cpp
source/Irrlicht/COpenGLPersistentlyMappedBuffer.cpp
source/Irrlicht/COpenGLQuery.cpp
source/Irrlicht/COpenGLRenderBuffer.cpp
source/Irrlicht/COpenGLSLMaterialRenderer.cpp
source/Irrlicht/COpenGLTexture.cpp
source/Irrlicht/COpenGLTransformFeedback.cpp
source/Irrlicht/COpenGLVAO.cpp
source/Irrlicht/CPLYMeshWriter.cpp
source/Irrlicht/CPakReader.cpp
source/Irrlicht/CReadFile.cpp
source/Irrlicht/CSTLMeshWriter.cpp
source/Irrlicht/CSTLMeshFileLoader.cpp
source/Irrlicht/CBurningShader_Raster_Reference.cpp
source/Irrlicht/CSceneManager.cpp
source/Irrlicht/CSceneNodeAnimatorCameraFPS.cpp
source/Irrlicht/CSceneNodeAnimatorCameraMaya.cpp
source/Irrlicht/CSceneNodeAnimatorDelete.cpp
source/Irrlicht/CSceneNodeAnimatorFlyCircle.cpp
source/Irrlicht/CSceneNodeAnimatorFlyStraight.cpp
source/Irrlicht/CSceneNodeAnimatorFollowSpline.cpp
source/Irrlicht/CSceneNodeAnimatorRotation.cpp
source/Irrlicht/CSceneNodeAnimatorTexture.cpp
source/Irrlicht/CSkinnedMesh.cpp
source/Irrlicht/CSkinnedMeshSceneNode.cpp
source/Irrlicht/CSkyBoxSceneNode.cpp
source/Irrlicht/CSkyDomeSceneNode.cpp
source/Irrlicht/CSoftwareDriver.cpp
source/Irrlicht/CSoftwareDriver2.cpp
source/Irrlicht/CSoftwareTexture.cpp
source/Irrlicht/CSoftwareTexture2.cpp
source/Irrlicht/CSphereSceneNode.cpp
source/Irrlicht/CTRFlat.cpp
source/Irrlicht/CTRFlatWire.cpp
source/Irrlicht/CTRGouraud.cpp
source/Irrlicht/CTRGouraud2.cpp
source/Irrlicht/CTRGouraudAlpha2.cpp
source/Irrlicht/CTRGouraudAlphaNoZ2.cpp
source/Irrlicht/CTRGouraudWire.cpp
source/Irrlicht/CTRNormalMap.cpp
source/Irrlicht/CTRStencilShadow.cpp
source/Irrlicht/CTRTextureBlend.cpp
source/Irrlicht/CTRTextureDetailMap2.cpp
source/Irrlicht/CTRTextureFlat.cpp
source/Irrlicht/CTRTextureFlatWire.cpp
source/Irrlicht/CTRTextureGouraud.cpp
source/Irrlicht/CTRTextureGouraud2.cpp
source/Irrlicht/CTRTextureGouraudAdd.cpp
source/Irrlicht/CTRTextureGouraudAdd2.cpp
source/Irrlicht/CTRTextureGouraudAddNoZ2.cpp
source/Irrlicht/CTRTextureGouraudAlpha.cpp
source/Irrlicht/CTRTextureGouraudAlphaNoZ.cpp
source/Irrlicht/CTRTextureGouraudNoZ.cpp
source/Irrlicht/CTRTextureGouraudNoZ2.cpp
source/Irrlicht/CTRTextureGouraudVertexAlpha2.cpp
source/Irrlicht/CTRTextureGouraudWire.cpp
source/Irrlicht/CTRTextureLightMap2_Add.cpp
source/Irrlicht/CTRTextureLightMap2_M1.cpp
source/Irrlicht/CTRTextureLightMap2_M2.cpp
source/Irrlicht/CTRTextureLightMap2_M4.cpp
source/Irrlicht/CTRTextureLightMapGouraud2_M4.cpp
source/Irrlicht/CTRTextureWire2.cpp
source/Irrlicht/CTarReader.cpp
source/Irrlicht/CVideoModeList.cpp
source/Irrlicht/CWADReader.cpp
source/Irrlicht/CWriteFile.cpp
source/Irrlicht/CXMeshFileLoader.cpp
source/Irrlicht/CZBuffer.cpp
source/Irrlicht/CZipReader.cpp
source/Irrlicht/FW_Mutex.cpp
source/Irrlicht/IBurningShader.cpp
source/Irrlicht/Irrlicht.cpp
source/Irrlicht/STextureSamplingParams.cpp
source/Irrlicht/aesGladman/aescrypt.cpp
source/Irrlicht/aesGladman/aeskey.cpp
source/Irrlicht/aesGladman/aestab.cpp
source/Irrlicht/aesGladman/fileenc.cpp
source/Irrlicht/aesGladman/hmac.cpp
source/Irrlicht/aesGladman/prng.cpp
source/Irrlicht/aesGladman/pwd2key.cpp
source/Irrlicht/aesGladman/sha1.cpp
source/Irrlicht/aesGladman/sha2.cpp
source/Irrlicht/convert_utf/ConvertUTF
source/Irrlicht/coreutil.cpp
source/Irrlicht/lzma/LzmaDec
source/Irrlicht/os.cpp

source/Irrlicht/zlib/adler32.c
source/Irrlicht/zlib/compress.c
source/Irrlicht/zlib/crc32.c
source/Irrlicht/zlib/deflate.c
source/Irrlicht/zlib/gzclose.c
source/Irrlicht/zlib/gzlib.c
source/Irrlicht/zlib/gzread.c
source/Irrlicht/zlib/gzwrite.c
source/Irrlicht/zlib/inflate.c
source/Irrlicht/zlib/infback.c
source/Irrlicht/zlib/inftrees.c
source/Irrlicht/zlib/inffast.c
source/Irrlicht/zlib/trees.c
source/Irrlicht/zlib/uncompr.c
source/Irrlicht/zlib/zutil.c

source/Irrlicht/libpng/png.c
source/Irrlicht/libpng/pngerror.c
source/Irrlicht/libpng/pngget.c
source/Irrlicht/libpng/pngmem.c
source/Irrlicht/libpng/pngpread.c
source/Irrlicht/libpng/pngread.c
source/Irrlicht/libpng/pngrio.c
source/Irrlicht/libpng/pngrtran.c
source/Irrlicht/libpng/pngrutil.c
source/Irrlicht/libpng/pngset.c
source/Irrlicht/libpng/pngtrans.c
source/Irrlicht/libpng/pngwio.c
source/Irrlicht/libpng/pngwrite.c
source/Irrlicht/libpng/pngwtran.c
source/Irrlicht/libpng/pngwutil.c

source/Irrlicht/jpeglib/jaricom.c
source/Irrlicht/jpeglib/jcapimin.c
source/Irrlicht/jpeglib/jcapistd.c
source/Irrlicht/jpeglib/jcarith.c
source/Irrlicht/jpeglib/jccoefct.c
source/Irrlicht/jpeglib/jccolor.c
source/Irrlicht/jpeglib/jcdctmgr.c
source/Irrlicht/jpeglib/jchuff.c
source/Irrlicht/jpeglib/jcinit.c
source/Irrlicht/jpeglib/jcmainct.c
source/Irrlicht/jpeglib/jcmarker.c
source/Irrlicht/jpeglib/jcmaster.c
source/Irrlicht/jpeglib/jcomapi.c
source/Irrlicht/jpeglib/jcparam.c
source/Irrlicht/jpeglib/jcprepct.c
source/Irrlicht/jpeglib/jcsample.c
source/Irrlicht/jpeglib/jctrans.c
source/Irrlicht/jpeglib/jdapimin.c
source/Irrlicht/jpeglib/jdapistd.c
source/Irrlicht/jpeglib/jdarith.c
source/Irrlicht/jpeglib/jdatadst.c
source/Irrlicht/jpeglib/jdatasrc.c
source/Irrlicht/jpeglib/jdcoefct.c
source/Irrlicht/jpeglib/jdcolor.c
source/Irrlicht/jpeglib/jddctmgr.c
source/Irrlicht/jpeglib/jdhuff.c
source/Irrlicht/jpeglib/jdinput.c
source/Irrlicht/jpeglib/jdmainct.c
source/Irrlicht/jpeglib/jdmarker.c
source/Irrlicht/jpeglib/jdmaster.c
source/Irrlicht/jpeglib/jdmerge.c
source/Irrlicht/jpeglib/jdpostct.c
source/Irrlicht/jpeglib/jdsample.c
source/Irrlicht/jpeglib/jdtrans.c
source/Irrlicht/jpeglib/jerror.c
source/Irrlicht/jpeglib/jfdctflt.c
source/Irrlicht/jpeglib/jfdctfst.c
source/Irrlicht/jpeglib/jfdctint.c
source/Irrlicht/jpeglib/jidctflt.c
source/Irrlicht/jpeglib/jidctfst.c
source/Irrlicht/jpeglib/jidctint.c
source/Irrlicht/jpeglib/jmemmgr.c
source/Irrlicht/jpeglib/jmemnobs.c
source/Irrlicht/jpeglib/jquant1.c
source/Irrlicht/jpeglib/jquant2.c
source/Irrlicht/jpeglib/jutils.c

source/Irrlicht/bzip2/blocksort.c
source/Irrlicht/bzip2/bzcompress.c
source/Irrlicht/bzip2/bzlib.c
source/Irrlicht/bzip2/decompress.c
source/Irrlicht/bzip2/huffman.c
source/Irrlicht/bzip2/randtable.c
source/Irrlicht/bzip2/crctable.c

)

include_directories(
  SYSTEM ${CMAKE_SOURCE_DIR}/include
  SYSTEM ${CMAKE_SOURCE_DIR}/source/Irrlicht/utf8/source
  SYSTEM ${CMAKE_SOURCE_DIR}/source/Irrlicht/convert_utf
)

#SET(IRRBAW_DEPENDENCY_LIBRARIES "-Wl,--export-all-symbols ${IRRBAW_DEPENDENCY_LIBRARIES}")
set(CMAKE_CXX_FLAGS "-Wextra -Wall -g -W -Wno-unused-parameter -fno-omit-frame-pointer -fno-exceptions -msse3 -ggdb3 -std=c++03 -fstack-protector-strong -D_IRR_STATIC_LIB_ -D_DEBUG -fstack-protector-strong -lGL -D_IRR_COMPILE_WITH_OPENGL_")
#set(CMAKE_CXX_FLAGS "-Wextra -Wall -g -W -Wno-unused-parameter -fno-omit-frame-pointer -fno-exceptions -fuse-ld=gold -msse3 -ggdb3 -std=c++03 -fstack-protector-strong -D_IRR_STATIC_LIB_ -D_DEBUG -fuse-ld=gold -fstack-protector-strong -lGL -D_IRR_COMPILE_WITH_OPENGL_")
add_library(IrrlichtBAW STATIC ${SOURCE_FILES})
target_link_libraries(IrrlichtBAW ${IRRBAW_DEPENDENCY_LIBRARIES} ${OPENGL_LIBRARIES} unwind Xrandr Xxf86vm X11 pthread unwind-x86_64)
